--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-06 15:43+0000\n"
+"POT-Creation-Date: 2021-01-11 17:06+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -5239,6 +5239,15 @@ msgstr "Les classificateurs vous permettent d'interpréter des mots et des phras
 msgid "Select your provider below to get started."
 msgstr "Sélectionnez votre fournisseur ci-dessous pour commencer."
 
+#, fuzzy
+#| msgid "Unable to delete service still being used by"
+msgid "Unable to delete classifier still being used by"
+msgstr "Impossible de supprimer le service toujours utilisé par"
+
+#, python-format
+msgid "You are about to delete <span class='font-normal'> %(name)s. </span> There is no way to undo this. Are you sure?"
+msgstr "Vous êtes sur le point de supprimer <span class='font-normal'> %(name)s. </span> Il n'y a aucun moyen d'annuler cela. Êtes-vous sûr?"
+
 msgid "Classifier"
 msgstr "Classificateur"
 
@@ -5256,21 +5265,6 @@ msgstr "Aucune intention synchronisée pour le moment."
 
 msgid "Intents are synced automatically every 5 minutes"
 msgstr "Les intentions sont synchronisées automatiquement toutes les 5 minutes"
-
-msgid "Are you sure you want to remove this classifier from your account?"
-msgstr "Voulez-vous vraiment supprimer ce classificateur de votre compte?"
-
-msgid "This classifier cannot be removed because it in use."
-msgstr "Ce classificateur ne peut pas être supprimé car il est en cours d'utilisation."
-
-msgid "Once it is removed, it will be gone forever. There is no way to undo this operation."
-msgstr "Une fois qu'il est supprimé, il sera perdu à jamais. Il est impossible d'annuler cette opération."
-
-#, python-format
-msgid "Used by %(num_flows)s flow:"
-msgid_plural "Used by %(num_flows)s flows:"
-msgstr[0] "Utilisé par %(num_flows)s flux:"
-msgstr[1] "Utilisé par %(num_flows)s flux:"
 
 msgid "Ok"
 msgstr "Ok"
@@ -5856,6 +5850,9 @@ msgstr "Supprimer le libellé"
 msgid "Are you sure you want to remove this label?"
 msgstr "Etes-vous sûr de vouloir supprimer ce libellé?"
 
+msgid "Once it is removed, it will be gone forever. There is no way to undo this operation."
+msgstr "Une fois qu'il est supprimé, il sera perdu à jamais. Il est impossible d'annuler cette opération."
+
 msgid "You cannot remove a label which has child labels. Please remove all children first."
 msgstr "Vous ne pouvez pas supprimer une étiquette qui a des étiquettes enfants. Veuillez d'abord retirer tous les enfants."
 
@@ -6219,6 +6216,12 @@ msgstr "Êtes-vous sûr de vouloir supprimer ce dossier? Cela supprimera égalem
 
 msgid "This label cannot be removed because it in use."
 msgstr "Cette étiquette ne peut pas être enlevée car elle est utilisée."
+
+#, python-format
+msgid "Used by %(num_flows)s flow:"
+msgid_plural "Used by %(num_flows)s flows:"
+msgstr[0] "Utilisé par %(num_flows)s flux:"
+msgstr[1] "Utilisé par %(num_flows)s flux:"
 
 #, python-format
 msgid ""
@@ -7645,10 +7648,6 @@ msgid "Unable to delete service still being used by"
 msgstr "Impossible de supprimer le service toujours utilisé par"
 
 #, python-format
-msgid "You are about to delete <span class='font-normal'> %(name)s. </span> There is no way to undo this. Are you sure?"
-msgstr "Vous êtes sur le point de supprimer <span class='font-normal'> %(name)s. </span> Il n'y a aucun moyen d'annuler cela. Êtes-vous sûr?"
-
-#, python-format
 msgid "Your verification code is <b>%(code)s</b> to continue adding an email-based ticketing service."
 msgstr "Votre code de vérification est <b>%(code)s</b> pour continuer à ajouter un service de billetterie par e-mail."
 
@@ -7751,6 +7750,12 @@ msgstr "Entrez une requête"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr "${count} trouvé pour ${query}"
+
+#~ msgid "Are you sure you want to remove this classifier from your account?"
+#~ msgstr "Voulez-vous vraiment supprimer ce classificateur de votre compte?"
+
+#~ msgid "This classifier cannot be removed because it in use."
+#~ msgstr "Ce classificateur ne peut pas être supprimé car il est en cours d'utilisation."
 
 #~ msgid "Smart Group"
 #~ msgstr "Groupe intelligent"
