--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-12 14:27+0000\n"
+"POT-Creation-Date: 2021-01-26 19:24+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -93,6 +93,61 @@ msgstr "Jours"
 
 msgid "Weeks"
 msgstr "Semaines"
+
+#, fuzzy, python-format
+#| msgid "%d minute"
+#| msgid_plural "%d minutes"
+msgid "%(num)d minute before"
+msgid_plural "%(num)d minutes before"
+msgstr[0] "%d minute"
+msgstr[1] "%d minutes"
+
+#, python-format
+msgid "%(num)d hour before"
+msgid_plural "%(num)d hours before"
+msgstr[0] ""
+msgstr[1] ""
+
+#, python-format
+msgid "%(num)d day before"
+msgid_plural "%(num)d days before"
+msgstr[0] ""
+msgstr[1] ""
+
+#, python-format
+msgid "%(num)d week before"
+msgid_plural "%(num)d weeks before"
+msgstr[0] ""
+msgstr[1] ""
+
+#, fuzzy, python-format
+#| msgid "%d minute"
+#| msgid_plural "%d minutes"
+msgid "%(num)d minute after"
+msgid_plural "%(num)d minutes after"
+msgstr[0] "%d minute"
+msgstr[1] "%d minutes"
+
+#, python-format
+msgid "%(num)d hour after"
+msgid_plural "%(num)d hours after"
+msgstr[0] ""
+msgstr[1] ""
+
+#, python-format
+msgid "%(num)d day after"
+msgid_plural "%(num)d days after"
+msgstr[0] ""
+msgstr[1] ""
+
+#, python-format
+msgid "%(num)d week after"
+msgid_plural "%(num)d weeks after"
+msgstr[0] ""
+msgstr[1] ""
+
+msgid "on"
+msgstr "actif"
 
 msgid "Select a group to base the campaign on"
 msgstr "Sélectionnez un groupe sur lequel baser la campagne"
@@ -7682,9 +7737,6 @@ msgstr "Un appel entrant"
 
 msgid "A new conversation"
 msgstr "Une nouvelle conversation"
-
-msgid "on"
-msgstr "actif"
 
 msgid "The referrer id"
 msgstr "L'identifiant du référent"
