updates translations (code_check.py)

--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-03 17:32+0000\n"
+"POT-Creation-Date: 2021-02-04 14:32+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -1128,6 +1128,37 @@ msgstr "Le mot de passe à utiliser pour s'authentifier auprès de Junebug"
 
 msgid "The token Junebug should use to authenticate"
 msgstr "Le jeton que Junebug devrait utiliser pour s'authentifier"
+
+#, fuzzy
+#| msgid "Activate your own enterprise WhatsApp account in %(link)s to communicate with your contacts. "
+msgid "Activate your own enterprise WhatsApp account in Kaleyra to communicate with your contacts. <a href=\"https://www.kaleyra.com/whatsapp/\">Learn more about Kaleyra WhatsApp"
+msgstr "Activez votre propre compte WhatsApp d'entreprise dans %(link)s pour communiquer avec vos contacts."
+
+#, fuzzy
+#| msgid "To finish configuring your Zenvia connection you'll need to set the following callback URLs on your Zenvia account."
+msgid "To finish configuring your Kaleyra connection you'll need to set the following callback URL on your Kaleyra account."
+msgstr "Pour terminer la configuration de votre connexion Zenvia, vous devrez définir les URL de rappel suivantes sur votre compte Zenvia."
+
+#, fuzzy
+#| msgid "To receive incoming messages, you need to set the receive URL for your Zenvia account."
+msgid "To receive incoming messages, you need to set the receive URL for your Kaleyra account."
+msgstr "Pour recevoir des messages entrants, vous devez définir l'URL de réception pour votre compte de Zenvia."
+
+msgid "Account SID"
+msgstr "Compte SID"
+
+#, fuzzy
+#| msgid "Your Twilio Account SID"
+msgid "Your Kaleyra Account SID"
+msgstr "Votre compte Twilio SID"
+
+#, fuzzy
+#| msgid "Your Nexmo API key"
+msgid "Your Kaleyra API Key"
+msgstr "Votre clé API Nexmo"
+
+msgid "No org for this user, cannot claim"
+msgstr ""
 
 #, python-format
 msgid "Connect your %(link)s instance, we'll walk you through the steps necessary to get your SMSC connection working in a few minutes."
@@ -3560,9 +3591,6 @@ msgstr "Votre clé API et votre secret DT One semblent invalides. Veuillez les v
 #, python-format
 msgid "Connecting to your DT One account failed with error text: %s"
 msgstr "La connexion à votre compte DT One a échoué avec un texte d'erreur: %s"
-
-msgid "Account SID"
-msgstr "Compte SID"
 
 msgid "Account Token"
 msgstr "Jeton de compte"
@@ -7749,15 +7777,12 @@ msgstr "Entrez une requête"
 msgid "Found ${count} for ${query}"
 msgstr "${count} trouvé pour ${query}"
 
-#, python-format
 #~ msgid "%(value)s must be http or https scheme"
 #~ msgstr "%(value)s doit être un schéma http ou https"
 
-#, python-format
 #~ msgid "%(value)s host cannot be resolved"
 #~ msgstr "L'hôte %(value)s ne peut pas être résolu"
 
-#, python-format
 #~ msgid "%(value)s cannot be localhost"
 #~ msgstr "%(value)s ne peut pas être localhost"
 
@@ -7797,7 +7822,6 @@ msgstr "${count} trouvé pour ${query}"
 #~ msgid "after"
 #~ msgstr "après"
 
-#, python-format
 #~ msgid "Email sent with subject <b>%(subject)s</b>"
 #~ msgstr "E-mail envoyé avec objet <b>%(subject)s</b>"
 
@@ -7846,25 +7870,21 @@ msgstr "${count} trouvé pour ${query}"
 #~ msgid "has"
 #~ msgstr "a"
 
-#, python-format
 #~ msgid "%(accounts)s Administrator,"
 #~ msgid_plural "%(accounts)s Administrators,"
 #~ msgstr[0] "%(accounts)s Administrateur,"
 #~ msgstr[1] "%(accounts)s Administrateurs,"
 
-#, python-format
 #~ msgid "%(accounts)s Editor,"
 #~ msgid_plural "%(accounts)s Editors,"
 #~ msgstr[0] "%(accounts)s Editeur,"
 #~ msgstr[1] "%(accounts)s Editeurs,"
 
-#, python-format
 #~ msgid "%(accounts)s Viewer,"
 #~ msgid_plural "%(accounts)s Viewers,"
 #~ msgstr[0] "%(accounts)s Observateur,"
 #~ msgstr[1] "%(accounts)s Observateurs,"
 
-#, python-format
 #~ msgid "%(accounts)s Surveyor."
 #~ msgid_plural "%(accounts)s Surveyors."
 #~ msgstr[0] "%(accounts)s Enquêteurs."
@@ -7942,7 +7962,6 @@ msgstr "${count} trouvé pour ${query}"
 #~ msgid "Are you sure you want to delete"
 #~ msgstr "Etes-vous sûr que vous voulez supprimer"
 
-#, python-format
 #~ msgid "<b>%(name)s</b> cannot be deleted since it is currently in use. Usage %%summary:"
 #~ msgstr "<b>%(name)s</b> ne peut pas être supprimé car il est actuellement utilisé. Résumé de l'utilisation %%:"
 
