--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-04 17:43+0000\n"
+"POT-Creation-Date: 2021-02-04 20:27+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -3134,9 +3134,6 @@ msgstr "Numéro de téléphone"
 msgid "Phone number for testing and recording voice flows"
 msgstr "Numéro de téléphone pour les essais et l'enregistrement des flux voix "
 
-msgid "OTP Secret"
-msgstr "Secret OTP"
-
 msgid "Two Factor Enabled"
 msgstr "Deux facteurs activé"
 
@@ -3448,10 +3445,17 @@ msgstr "Vous devez avoir au moins un administateur"
 msgid "Manage Logins"
 msgstr "Gérer les connexions"
 
-msgid "Enter the code from your authentication application"
+msgid "One-time Password (OTP)"
+msgstr ""
+
+#, fuzzy
+#| msgid "Enter the code from your authentication application"
+msgid "Enter the one-time password from your authentication application."
 msgstr "Entrez le code de votre application d'authentification"
 
-msgid "Invalid MFA token. Please try again."
+#, fuzzy
+#| msgid "Invalid MFA token. Please try again."
+msgid "Incorrect OTP. Please try again."
 msgstr "Jeton MFA non valide. Veuillez réessayer."
 
 msgid "Two Factor Authentication"
@@ -6964,8 +6968,9 @@ msgstr "Déconnecter Twilio"
 msgid "Disconnecting your Twilio account will also remove any Twilio channels connected to it. Are you sure you want to proceed?"
 msgstr "La déconnexion de votre compte Twilio supprimera également toutes les chaînes Twilio qui y sont connectées. Êtes-vous sur de vouloir continuer?"
 
-msgid "To enable two factor authentication, use a one time password application such as"
-msgstr "Pour activer l'authentification à deux facteurs, utilisez une application de mot de passe à usage unique telle que"
+#, python-format
+msgid "To enable two factor authentication, use a one-time password (OTP) application such as <a href=\"%(ga_url)s\">Google Authenticator</a> or <a href=\"%(authy_url)s\">Authy</a> to scan the QR code below and generate an OTP."
+msgstr ""
 
 msgid "Backup tokens can be used if you no longer have access to the authentication application configured for your account."
 msgstr "Les jetons de sauvegarde peuvent être utilisés si vous n'avez plus accès à l'application d'authentification configurée pour votre compte."
@@ -6978,6 +6983,16 @@ msgstr "Générer des jetons de sauvegarde"
 
 msgid "Disable Two Factor"
 msgstr "Désactiver deux facteurs"
+
+#, fuzzy
+#| msgid "Two Factor Authentication"
+msgid "Two Factor Authentication is <b>enabled</b>."
+msgstr "Authentification à deux facteurs"
+
+#, fuzzy
+#| msgid "Two Factor Authentication"
+msgid "Two Factor Authentication is <b>disabled</b>."
+msgstr "Authentification à deux facteurs"
 
 msgid "This workspace has been suspended"
 msgstr "Cet espace de travail a été suspendu"
@@ -7745,6 +7760,12 @@ msgstr "Entrez une requête"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr "${count} trouvé pour ${query}"
+
+#~ msgid "OTP Secret"
+#~ msgstr "Secret OTP"
+
+#~ msgid "To enable two factor authentication, use a one time password application such as"
+#~ msgstr "Pour activer l'authentification à deux facteurs, utilisez une application de mot de passe à usage unique telle que"
 
 #~ msgid "Used"
 #~ msgstr "Utilisé"
