--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-04 14:32+0000\n"
+"POT-Creation-Date: 2021-02-08 10:38+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -4690,13 +4690,18 @@ msgstr "O link do seu convite não é válido. Por favor, contate o administrado
 msgid "Join %(name)s"
 msgstr "Junte-se a %(name)s"
 
-msgid "Join"
-msgstr "Junte-se"
+#, fuzzy
+#| msgid "Please click Join to accept the invitation."
+msgid "Sign in with your account to accept the invitation"
+msgstr "Por favor, clique em Juntar-se para aceitar o convite."
 
 #, fuzzy
 #| msgid "Your invitation link has expired. Please contact your organization administrator."
 msgid "Your invitation link has expired. Please contact your workspace administrator."
 msgstr "O link do seu convite expirou. Por favor, contate o administrador da organização."
+
+msgid "Join"
+msgstr "Junte-se"
 
 #, fuzzy
 #| msgid "Invalid claim code, please check and try again."
@@ -8703,14 +8708,6 @@ msgstr "Editar nome"
 msgid "Choose a country to enable location support in your flows."
 msgstr ""
 
-#, fuzzy
-#| msgid "Create new account"
-msgid "Create new login"
-msgstr "Criar nova conta"
-
-msgid "Sign in"
-msgstr "Entrar"
-
 msgid "Add Credits"
 msgstr "Adicionar créditos"
 
@@ -8873,6 +8870,9 @@ msgstr ""
 
 msgid "Do not proceed unless you are willing to replace your existing flows and campaigns."
 msgstr ""
+
+msgid "Sign in"
+msgstr "Entrar"
 
 #, fuzzy, python-format
 #| msgid "You have been invited to join"
@@ -9915,6 +9915,11 @@ msgstr "Insira o seu código de requisição"
 #, python-brace-format
 msgid "Found ${count} for ${query}"
 msgstr ""
+
+#, fuzzy
+#~| msgid "Create new account"
+#~ msgid "Create new login"
+#~ msgstr "Criar nova conta"
 
 #, fuzzy
 #~| msgid "users"
