--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-08 21:12+0000\n"
+"POT-Creation-Date: 2021-02-10 12:12+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -239,6 +239,11 @@ msgstr "O grupo enviará a mensagem para"
 #| msgid "Send this message"
 msgid "Skip this message"
 msgstr "Enviar essa mensagem"
+
+#, fuzzy
+#| msgid "Send Message"
+msgid "Send the message"
+msgstr "Enviar mensagem"
 
 #, fuzzy
 msgid "Message sending rules"
