--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-02-08 21:12+0000\n"
+"POT-Creation-Date: 2021-02-10 12:12+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -234,6 +234,11 @@ msgstr "Остановить это и отправить сообщение"
 
 msgid "Skip this message"
 msgstr "Пропустить данное сообщение"
+
+#, fuzzy
+#| msgid "Send Message"
+msgid "Send the message"
+msgstr "Отправить Сообщение"
 
 msgid "Message sending rules"
 msgstr "Правила отправки сообщения"
